project(CloudBox)
cmake_minimum_required(VERSION 2.8.8)

#INCLUDE(CMakeBuild/cross.cmake)

SET(OS_NAME LINUX)
MESSAGE("${CMAKE_C_COMPILER}")
#MESSAGE(STATUS "${CMAKE_FIND_ROOT_PATH}")
#MESSAGE(STATUS "${PROJECT_SOURCE_DIR}")
#MESSAGE(STATUS "${PROJECT_BINARY_DIR}")

SET(BIN_OUT_PATH, ${PROJECT_BINARY_DIR}/bin)
SET(LIB_OUT_PATH, ${PROJECT_BINARY_DIR}/lib)
MESSAGE("${PROJECT_SOURCE_DIR}")
include_directories(${PROJECT_SOURCE_DIR})
link_directories(${LIB_OUT_PATH})
link_directories(${BIN_OUT_PATH})
#MESSAGE(STATUS "${CMAKE_INCLUDE_PATH}")

#SET(RELEASE_MODE FALSE)
#MESSAGE("${RELEASE_MODE}")

SET(DEBUG_FLAGS -DLINUX -D_DEBUG -D_EPOLL)
SET(DEBUG_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g -Wno-unused -fPIC")

SET(RELEASE_FLAGS -DLINUX -D_EPOLL)
SET(RELEASE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -Wno-unused -fPIC")

IF(RELEASE_MODE)
        ADD_DEFINITIONS(${RELEASE_C_FLAGS})
        ADD_DEFINITIONS(${RELEASE_FLAGS})
ELSE(RELEASE_MODE)
        ADD_DEFINITIONS(${DEBUG_C_FLAGS})
        ADD_DEFINITIONS(${DEBUG_FLAGS})
ENDIF(RELEASE_MODE)


ADD_SUBDIRECTORY(libev)
#ADD_SUBDIRECTORY(common)
